test/org/midica/testfiles/failing/eff-flow-note-invalid.midica
INCLUDE inc/instruments.midica


0: mono_at.note(c+6).set(123)
